--- a/devops.html
+++ b/devops.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/quadient/job/oj4rbfwJ'>Quadient Careers - Ing?nieur Syst?me DevOps</a></h5> 
+<p><span class="badge badge-light">France</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/TitanDataInc/743999698185480-technical-product-manager-devops'>TitanData Inc. Technical Product Manager - Devops | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -54,7 +58,7 @@
 <p><span class="badge badge-light">Boston, Massachusetts  Bangalore Boston</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o1S4afwR&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=n998mMw3'>ServiceNow Careers - Technical Lead ? DevOps</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o1S4afwR&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=n998mMw3'>ServiceNow Careers - Technical Lead ? DevOps</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -96,7 +100,7 @@
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qdFaVfwH&k=Job&j=o4rfafwE&__jvst=Referral&__jvsd=s6lxKhwu&__jvsc=Twitter&bid=nNeZmMwD'>Rackspace Careers - DevOps Consultant</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qdFaVfwH&k=Job&j=o4rfafwE&__jvst=Referral&__jvsd=s6lxKhwu&__jvsc=Twitter&bid=nNeZmMwD'>Rackspace Careers - DevOps Consultant</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -165,7 +169,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/punchh/jobs/4494241002'>Job Application for Senior Software Engineer (with DevOps experience) at Punchh</a></h5> 
+<h5><a href='https://boards.greenhouse.io/punchh/jobs/4494241002'>Job Application for Senior Software Engineer (with DevOps experience) at Punchh</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -181,7 +185,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://twincap.join.com/jobs/465195-it-devops-iot-ref-106146'>Job @ TwinCap (Zug): IT DevOps IoT / Ref. 106146 | JOIN</a></h5> 
+<h5><a href='https://twincap.join.com/jobs/465195-it-devops-iot-ref-106146'>Job @ TwinCap (Zug): IT DevOps IoT / Ref. 106146 | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -237,7 +241,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Linkbynet/743999698252976-administrateur-devops-h-f'>Linkbynet Administrateur Devops H/F | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Linkbynet/743999698252976-administrateur-devops-h-f'>Linkbynet Administrateur Devops H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -249,7 +253,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241891-system-engineer-devops'>Netcentric System Engineer - DevOps | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241891-system-engineer-devops'>Netcentric System Engineer - DevOps | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -301,7 +305,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nicesystems/job/oTTqbfw7'>NICE Careers - DevOps Engineer - NICE Actimize</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nicesystems/job/oTTqbfw7'>NICE Careers - DevOps Engineer - NICE Actimize</a></h5> 
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -330,7 +334,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">Canada  Winnipeg, MB</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/blackline/job/olbpbfwQ'>BlackLine Careers - Senior DevOps Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/blackline/job/olbpbfwQ'>BlackLine Careers - Senior DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -370,7 +374,7 @@ of?...</p>
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oTTqbfw7&__jvst=Employee+Referral&__jvsd=sHAdDgwS&__jvsc=Twitter&bid=nKYllMwF'>NICE Actimize Careers - DevOps Engineer - NICE Actimize</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oTTqbfw7&__jvst=Employee+Referral&__jvsd=sHAdDgwS&__jvsc=Twitter&bid=nKYllMwF'>NICE Actimize Careers - DevOps Engineer - NICE Actimize</a></h5> 
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -404,7 +408,7 @@ of?...</p>
 <p><span class="badge badge-light">Curitiba</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/peak6/jobs/1930358'>Job Application for DevOps Engineer at PEAK6</a></h5> 
+<h5><a href='https://boards.greenhouse.io/peak6/jobs/1930358'>Job Application for DevOps Engineer at PEAK6</a></h5> 
 <p><span class="badge badge-light">Chicago, IL  ?  Chicago</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -448,11 +452,7 @@ of?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='http://taranawireless.applytojob.com/apply/fU3sDaGYCp/Senior-DevOps-Engineer'>Senior DevOps Engineer - Tarana Wireless - Career Page</a></h5> 
-<p><span class="badge badge-light">Milpitas</span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
